# aiologging

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aiologging/: __init__.py  bridge.py  config.py  exceptions.py  formatters.py  logger.py  types.py  utils.py
aiologging/handlers/: __init__.py  base.py  file.py  http.py  rotating.py  stream.py  telegram.py
docs/: adding-a-handler.md  architecture.md  conventions.md  development.md  releases.md  stress-testing.md
examples/: basic_usage.py  config_usage.py  drop_policy.py  emergency_flush.py  file_logging.py  http_logging.py  inline_alerts.py  stdlib_capture.py  telegram_logging.py
scripts/: release.sh
stress/: __init__.py  __main__.py  baseline.py  baselines.json  metrics.py  report.py  runner.py  sinks.py  workload.py
stress/scenarios/: __init__.py  chaos.py  delivery.py  fuzz.py  overload.py  soak.py  surface.py  throughput.py
tests/: __init__.py  conftest.py  test_bridge.py  test_config.py  test_drop_policy.py  test_exceptions.py  test_file_handlers.py  test_flush_sync.py  test_formatters.py  test_handlers.py  test_http_handlers.py  test_inline_delivery.py  test_logger.py  test_loop_affinity.py  test_regressions.py  test_rotating_handlers.py  test_telegram_handler.py  test_types.py  test_utils.py
