[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiologging"
version = "0.1.0"
description = "Asynchronous logging library with full compatibility to standard logging module"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aiologging Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
aiofiles = [
    "aiofiles>=23.0.0",
]
aiohttp = [
    "aiohttp>=3.8.0",
]
protobuf = [
    "protobuf>=4.0.0",
]
all = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "protobuf>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-aiofiles",
    "types-protobuf",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "protobuf>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/aiologging"
Repository = "https://github.com/example/aiologging"
Documentation = "https://aiologging.readthedocs.io"
"Bug Tracker" = "https://github.com/example/aiologging/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiologging*"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Conditional configuration for Python 3.9+
[[tool.mypy.overrides]]
module = [
    "aiologging.*",
    "tests.*"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=aiologging",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["aiologging"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
